# dukglue

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md
cmake_modules/: FindDukglue.cmake  FindDuktape.cmake
dukglue/: CMakeLists.txt  detail_class.h  detail_class_proto.h  detail_constructor.h  detail_function.h  detail_method.h  detail_primitive_types.h  detail_refs.h  detail_stack.h  detail_traits.h  detail_typeinfo.h  detail_types.h  dukglue.h  example_vector3.h  register_class.h  register_function.h  register_objects.h  register_property.h  test.cpp
duktape/: CMakeLists.txt
include/: CMakeLists.txt
include/dukglue/: detail_class_proto.h  detail_constructor.h  detail_function.h  detail_method.h  detail_primitive_types.h  detail_refs.h  detail_traits.h  detail_typeinfo.h  dukglue.h  dukvalue.h  public_util.h  register_class.h  register_function.h  register_property.h
tests/: CMakeLists.txt  duktape.h  main.cpp  test_assert.cpp  test_assert.h  test_classes.cpp  test_dukvalue.cpp  test_inheritance.cpp  test_multiple_contexts.cpp  test_primitives.cpp  test_properties.cpp
